# yt-dlp-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  env.md  history.md  pyproject.toml
AGENTS/: ENV.md  HISTORY.md  MEMORY.md  SPEC.md  STATE.md
deploy/: yt-dlp-mcp-update.service  yt-dlp-mcp-update.timer  yt-dlp-mcp.service
docs/adr/: TEMPLATE.md
src/yt_dlp_mcp/: __init__.py  config.py  context.py  models.py  server.py  slug.py  tasks.py  tools.py
src/yt_dlp_mcp/clients/: ytdlp.py
tests/: conftest.py  test_slug.py  test_tools.py  test_ytdlp_client.py
